--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'android.arch.paging:runtime:1.0.1'
 }
