--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         buildConfigField "String", "API_URL", '"https://www.behance.net/"'
-        buildConfigField "String", "API_KEY", '"PK2ePWvvXiBXzzHWDHPCsjEvJdZzhIQm"'
+        buildConfigField "String", "API_KEY", '"4GcG7j6w60XEn4SRoNR1mb8JNkPICNDl"'
         buildConfigField "String", "API_QUERY", '"motorcycle"'
     }
     buildTypes {
@@ -50,4 +50,8 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    // dagger 2
+    implementation 'com.google.dagger:dagger:2.13'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.13'
+    implementation 'com.google.dagger:dagger-android-support:2.13'
 }
