--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,7 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.13'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.13'
     implementation 'com.google.dagger:dagger-android-support:2.13'
+
+    implementation 'com.arello-mobile:moxy:1.5.6'
+    annotationProcessor 'com.arello-mobile:moxy-compiler:1.5.6'
 }
