--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
 
     implementation 'com.arello-mobile:moxy:1.5.6'
     annotationProcessor 'com.arello-mobile:moxy-compiler:1.5.6'
+    implementation 'com.arello-mobile:moxy-app-compat:1.5.6'
 }
