--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,12 @@ android {
         buildConfigField "String", "API_URL", '"https://www.behance.net/"'
         buildConfigField "String", "API_KEY", '"4GcG7j6w60XEn4SRoNR1mb8JNkPICNDl"'
         buildConfigField "String", "API_QUERY", '"motorcycle"'
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [ toothpick_registry_package_name : 'com.elegion.test.behancer' ]
+            }
+        }
     }
     buildTypes {
         release {
@@ -50,8 +56,8 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    // dagger 2
-    implementation 'com.google.dagger:dagger:2.13'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.13'
-    implementation 'com.google.dagger:dagger-android-support:2.13'
+
+    implementation 'com.github.stephanenicolas.toothpick:toothpick-runtime:1.1.3'
+    implementation 'com.github.stephanenicolas.toothpick:smoothie:1.1.3'
+    annotationProcessor 'com.github.stephanenicolas.toothpick:toothpick-compiler:1.1.3'
 }
