--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.1.6'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
+    implementation "android.arch.persistence.room:runtime:1.0.0"
     // dagger 2
     implementation 'com.google.dagger:dagger:2.13'
     implementation 'com.google.dagger:dagger-android-support:2.13'
