--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -14,5 +14,5 @@ dependencies {
     implementation 'com.google.dagger:dagger-android-support:2.13'
 }
 
-sourceCompatibility = "7"
-targetCompatibility = "7"
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
