--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -9,9 +9,10 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
     implementation "android.arch.persistence.room:runtime:1.0.0"
-    // dagger 2
-    implementation 'com.google.dagger:dagger:2.13'
-    implementation 'com.google.dagger:dagger-android-support:2.13'
+
+    implementation 'com.github.stephanenicolas.toothpick:toothpick-runtime:3.1.0'
+    implementation 'com.github.stephanenicolas.toothpick:smoothie:3.1.0'
+    annotationProcessor 'com.github.stephanenicolas.toothpick:toothpick-compiler:3.1.0'
 }
 
 sourceCompatibility = '1.8'
